examples/01-clean-code-arch-simple/src/domain/orders/errors/cannot-cancel-shipped-order-error.ts
export class CannotCancelShippedOrderError extends Error {
  constructor(orderId: string) {
    super(`Cannot cancel order ${orderId}: order has already been shipped`);
    this.name = "CannotCancelShippedOrderError";
  }
}
